--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,6 +44,7 @@ jobs:
             --exclude=tests \
             --exclude=docs \
             --exclude=AGENTS.md \
+            --exclude=README.md \
             --exclude=ajc-bridge
       
       - name: Create release archive
