Refactor .distignore and update release workflow to exclude unnecessary files; add CSS handling for headless notice page

--- a/.distignore
+++ b/.distignore
@@ -1,9 +1,16 @@
 .git
 .github
 .gitignore
-.distignore
-composer.json
-composer.lock
-tests/
-docs/
+node_modules
+.vscode
+.idea
+*.log
 vendor/bin/
+vendor/**/bin/
+vendor/**/test/
+vendor/**/tests/
+vendor/**/.git/
+.DS_Store
+Thumbs.db
+!composer.json
+!composer.lock
