--- a/.distignore
+++ b/.distignore
@@ -14,3 +14,24 @@ vendor/**/.git/
 Thumbs.db
 !composer.json
 !composer.lock
+vendor/**/bin/
+vendor/**/test/
+vendor/**/tests/
+vendor/**/Test/
+vendor/**/Tests/
+vendor/**/.github/
+vendor/**/docs/
+vendor/**/doc/
+vendor/**/example/
+vendor/**/examples/
+vendor/**/phpunit*
+vendor/**/psalm*
+vendor/**/phpstan*
+vendor/**/phpcs*
+vendor/**/CHANGELOG*
+vendor/**/CONDUCT*
+vendor/**/README*
+vendor/**/readme*
+vendor/**/composer.json
+vendor/**/composer.lock
+vendor/**/.editorconfig
